--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,15 +14,13 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: "";
-  align-items: "";
 }
 body ul {
   list-style: none;
 }
 
 header {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   border: 1px solid black;
   display: flex;
   flex-direction: column;
@@ -33,31 +31,126 @@ header {
 nav {
   font-size: 1.5rem;
   border-bottom: 1px solid black;
-}
-nav ul {
-  height: 3rem;
-  margin: 0;
-  padding: 0;
+  /*ul {
+          height: 3rem;
+          margin: 0;
+          padding: 0;
+
+      .door-tab {
+          width: 100%;
+          text-align: center;
+          padding: .5rem;
+
+          &:first-child {
+
+              &:hover {
+                  background-color: rgb(117, 250, 206);
+                  cursor: pointer;
+              }
+
+          }
+
+          &:nth-child(2) {
+
+              &:hover {
+                  background-color: rgb(120, 206, 255);
+                  cursor: pointer;
+              }
+          }
+
+          &:nth-child(3) {
+
+              &:hover {
+                  background-color: rgb(255, 118, 237);
+                  cursor: pointer;
+
+              }
+          }
+
+          &:nth-child(4) {
+
+              &:hover {
+                  background-color: rgb(140, 206, 250);
+                  cursor: pointer;
+              }
+          }
+
+          &:nth-child(5) {
+
+              &:hover {
+                  background-color: rgb(225, 142, 250);
+                  cursor: pointer;
+              }
+          }
+      }
+
+
+  @include flexCenter(row, center, center)
+
+  }*/
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  align-items: "";
+  justify-content: center;
+  align-items: center;
 }
-nav ul .door-tab {
+nav ul {
+  padding: 0;
+  margin: 0;
   width: 100%;
-  text-align: center;
-  padding: 0.5rem;
 }
-nav ul .door-tab:first-child:hover {
-  background-color: rgb(117, 250, 206);
+nav ul li {
+  height: 3rem;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+nav ul li:hover {
+  background-color: lightblue;
+  text-decoration: underline;
   cursor: pointer;
 }
-nav ul .door-tab:nth-child(2):hover {
-  background-color: rgb(228, 228, 228);
-  cursor: pointer;
+
+.content-box {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  position: relative;
 }
-nav ul .door-tab:nth-child(3):hover {
-  background-color: rgb(255, 118, 237);
+
+.mansus-table {
+  background-image: url("../src/Mansus.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 1600px;
+  margin: 0;
+  padding-top: 1rem;
+  height: 100%;
+  width: 100%;
+}
+.mansus-table ul {
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  border-right: 1px solid black;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  width: 300px;
+  height: 40%;
+  margin: 0;
+  padding-top: 1rem;
+}
+.mansus-table ul li {
+  font-size: 1.3rem;
+  padding: 1rem;
+  transition: transform 0.4s ease-in-out;
+}
+.mansus-table ul li:hover {
+  transform: scale(1.1);
   cursor: pointer;
-  color: whitesmoke;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }/*# sourceMappingURL=styles.css.map */
