--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,8 +20,9 @@ body ul {
 }
 
 header {
-  font-size: 1.3rem;
+  font-size: 1.4rem;
   border: 1px solid black;
+  font-weight: bold;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,7 +30,7 @@ header {
 }
 
 nav {
-  font-size: 1.5rem;
+  font-size: 2rem;
   border-bottom: 1px solid black;
   /*ul {
           height: 3rem;
@@ -119,38 +120,74 @@ nav ul li:hover {
   padding: 0;
   height: 100vh;
   position: relative;
+  display: none;
 }
-
-.mansus-table {
+.content-box .mansus-table {
   background-image: url("../src/Mansus.png");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 1600px;
+  background-size: 100% 100%;
   margin: 0;
   padding-top: 1rem;
+  overflow: auto;
   height: 100%;
   width: 100%;
+  gap: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-.mansus-table ul {
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
-  border-right: 1px solid black;
+.content-box .mansus-table ul {
+  box-shadow: 6px 6px 3px 3px rgb(56, 56, 56);
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-  width: 300px;
-  height: 40%;
+  min-width: 420px;
+  height: 400px;
   margin: 0;
   padding-top: 1rem;
+  background-color: white;
+  flex-shrink: 0;
 }
-.mansus-table ul li {
-  font-size: 1.3rem;
+.content-box .mansus-table ul li {
+  font-size: 2rem;
   padding: 1rem;
   transition: transform 0.4s ease-in-out;
 }
-.mansus-table ul li:hover {
+.content-box .mansus-table ul li:hover {
   transform: scale(1.1);
   cursor: pointer;
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
+  text-decoration: underline;
+}
+.content-box .mansus-table .way-box {
+  display: grid;
+  grid-template-columns: repeat(3, 350px);
+  grid-template-rows: 80px 1fr 1fr 1fr;
+  font-size: 1rem;
+  min-width: 1050;
+  height: 640px;
+  margin-right: 200px;
+  background-color: white;
+  overflow: auto;
+  flex-shrink: 0;
+}
+.content-box .mansus-table .way-box div {
+  font-size: 1.4rem;
+  text-align: center;
+  border-bottom: 1px solid black;
+  border-top: 1px solid black;
+  overflow: scroll;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.content-box .mansus-table .way-box div:first-child {
+  border-left: 1px solid black;
+}
+.content-box .mansus-table .way-box div:first-child, .content-box .mansus-table .way-box div:nth-child(2) {
+  border-right: 1px solid black;
 }/*# sourceMappingURL=styles.css.map */
