--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -31,14 +31,15 @@ body {
 }
 
 header {
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     border: 1px solid black;
+    font-weight: bold;
 
     @include flexCenter(column, center, center)
 }
 
 nav {
-    font-size: 1.5rem;
+    font-size: 2rem;
     border-bottom: 1px solid black;
     
 
@@ -130,45 +131,90 @@ nav {
     height: 100vh;
     position: relative;
 
-}
+    display: none;
 
-.mansus-table {
-    background-image: url('../src/Mansus.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 1600px;
-    margin: 0;
-    padding-top: 1rem;
-    
-    height: 100%;
-    width: 100%;
-
-    ul {
-        border-top: 1px solid black;
-        border-bottom: 1px solid black;
-        border-right: 1px solid black;
-        border-top-right-radius: 10px;
-        border-bottom-right-radius: 10px;
-        width: 300px;
-        height: 40%;
+    .mansus-table {
+        background-image: url('../src/Mansus.png');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 100% 100%;
         margin: 0;
         padding-top: 1rem;
-
-        li {
-            font-size: 1.3rem;
-            padding: 1rem;
-            transition: transform .4s ease-in-out;
-            
-
-            &:hover {
-                transform: scale(1.1);
-                cursor: pointer;
-                user-select: none;
-            }
-        }
-    }
+        overflow: auto;
+        
+        height: 100%;
+        width: 100%;
+        gap: 10px;
     
+        ul {
+            box-shadow: 6px 6px 3px 3px rgb(56, 56, 56);
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
+            min-width: 420px;
+            height: 400px;
+            margin: 0;
+            padding-top: 1rem;
+            background-color: white;
+            flex-shrink: 0;
+    
+            li {
+                font-size: 2rem;
+                padding: 1rem;
+                transition: transform .4s ease-in-out;
+                
+    
+                &:hover {
+                    transform: scale(1.1);
+                    cursor: pointer;
+                    user-select: none;
+                    text-decoration: underline;
+                }
+            }
+            
+        }
+
+        .way-box {
+            display: grid;
+            grid-template-columns: repeat(3, 350px);
+            grid-template-rows: 80px 1fr 1fr 1fr;
+            font-size: 1rem;
+            min-width: calc(350*3);
+            height: 640px;
+            margin-right: 200px;
+            background-color: white;
+            overflow: auto;
+            flex-shrink: 0;
+            
+            
+            div {
+                font-size: 1.4rem;
+                text-align: center;
+                border-bottom: 1px solid black;
+                border-top: 1px solid black;
+                overflow: scroll;
+
+                @include flexCenter(row, center, center)
+            }
+
+            div:first-child {
+                border-left: 1px solid black;
+            }
+
+            div:first-child, div:nth-child(2) {
+                border-right: 1px solid black;
+            }
+            
+        }
+
+        @include flexCenter(row, space-between, center)
+        
+    }
+
+    
+
 }
+
+
 
 
 
