--- a/styles/styles.css
+++ b/styles/styles.css
@@ -164,30 +164,35 @@ nav ul li:hover {
 }
 .content-box .mansus-table .way-box {
   display: grid;
-  grid-template-columns: repeat(3, 350px);
-  grid-template-rows: 80px 1fr 1fr 1fr;
-  font-size: 1rem;
-  min-width: 1050;
+  grid-template-rows: 80px 1fr;
+  width: 1050px;
+  background-color: white;
   height: 640px;
   margin-right: 200px;
-  background-color: white;
   overflow: auto;
   flex-shrink: 0;
 }
-.content-box .mansus-table .way-box div {
-  font-size: 1.4rem;
+.content-box .mansus-table .way-box .headers {
+  display: grid;
+  grid-template-columns: repeat(3, 350px);
+  font-size: 1.3rem;
   text-align: center;
-  border-bottom: 1px solid black;
-  border-top: 1px solid black;
-  overflow: scroll;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
 }
-.content-box .mansus-table .way-box div:first-child {
+.content-box .mansus-table .way-box .headers div {
+  padding-top: 20px;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+}
+.content-box .mansus-table .way-box .headers div:last-child {
+  border-right: 1px solid black;
   border-left: 1px solid black;
 }
-.content-box .mansus-table .way-box div:first-child, .content-box .mansus-table .way-box div:nth-child(2) {
-  border-right: 1px solid black;
+.content-box .mansus-table .way-box .headers div:not(:last-child) {
+  border-left: 1px solid black;
+}
+.content-box .mansus-table .way-box .way-products {
+  display: grid;
+  grid-template-columns: repeat(3, 350px);
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-auto-rows: 1fr;
 }/*# sourceMappingURL=styles.css.map */
