--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,6 +98,8 @@ nav ul {
   padding: 0;
   margin: 0;
   width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 nav ul li {
   height: 3rem;
@@ -114,6 +116,9 @@ nav ul li:hover {
   text-decoration: underline;
   cursor: pointer;
 }
+nav ul li:first-child {
+  border-right: 1px solid black;
+}
 
 .content-box {
   margin: 0;
@@ -123,7 +128,7 @@ nav ul li:hover {
   display: none;
 }
 .content-box .mansus-table {
-  background-image: url("../src/Mansus.png");
+  background-image: url("../src/img/Mansus.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100% 100%;
@@ -149,12 +154,29 @@ nav ul li:hover {
   background-color: white;
   flex-shrink: 0;
 }
-.content-box .mansus-table ul li {
+.content-box .mansus-table ul div {
+  gap: 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: "";
+  align-items: center;
+}
+.content-box .mansus-table ul div li {
   font-size: 2rem;
   padding: 1rem;
   transition: transform 0.4s ease-in-out;
 }
-.content-box .mansus-table ul li:hover {
+.content-box .mansus-table ul div li:hover img {
+  opacity: 1;
+}
+.content-box .mansus-table ul div img {
+  height: 45px;
+  transition: opacity 0.4s ease-in-out;
+  transition: transform 0.4s ease-in-out;
+  border-radius: 10px;
+  opacity: 0;
+}
+.content-box .mansus-table ul div:hover li {
   transform: scale(1.1);
   cursor: pointer;
   -webkit-user-select: none;
@@ -162,12 +184,16 @@ nav ul li:hover {
           user-select: none;
   text-decoration: underline;
 }
+.content-box .mansus-table ul div:hover img {
+  opacity: 1;
+  transform: scale(1.5);
+}
 .content-box .mansus-table .way-box {
   display: grid;
   grid-template-rows: 80px 1fr;
   width: 1050px;
   background-color: white;
-  height: 640px;
+  height: 85%;
   margin-right: 200px;
   overflow: auto;
   flex-shrink: 0;
@@ -175,7 +201,7 @@ nav ul li:hover {
 .content-box .mansus-table .way-box .headers {
   display: grid;
   grid-template-columns: repeat(3, 350px);
-  font-size: 1.3rem;
+  font-size: 1.4rem;
   text-align: center;
 }
 .content-box .mansus-table .way-box .headers div {
@@ -193,6 +219,22 @@ nav ul li:hover {
 .content-box .mansus-table .way-box .way-products {
   display: grid;
   grid-template-columns: repeat(3, 350px);
-  grid-template-rows: 1fr 1fr 1fr;
+  font-size: 1.2rem;
+}
+.content-box .mansus-table .way-box .way-products .products {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
   grid-auto-rows: 1fr;
+  text-align: center;
+  border-bottom: 1px solid black;
+  border-right: 1px solid black;
+}
+.content-box .mansus-table .way-box .way-products .products div {
+  padding: 20px 15px 15px 10px;
+}
+.content-box .mansus-table .way-box .way-products .products div:not(:last-child) {
+  border-bottom: 1px solid black;
+}
+.content-box .mansus-table .way-box .way-products .products:first-child {
+  border-left: 1px solid black;
 }/*# sourceMappingURL=styles.css.map */
