--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -9,7 +9,6 @@ $bodyColor: rgb(36, 75, 97);
     align-items: $align;
 }
 
-
 html {
     box-sizing: border-box;
 }
@@ -185,7 +184,7 @@ nav {
                 font-size: 1.4rem;
                 text-align: center;
                 font-weight: bold;
-                font-family: "Philosopher", sans-serif;
+                font-family: "Belgrad", sans-serif;
 
                 div {
                     padding: 10px 20px 0px 20px;
@@ -255,9 +254,25 @@ nav {
         top: 815px;
     }
 
+    .rituals {
+        background-image: url('../src/img/rites.png');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 100% 100%;
+        margin: 0;
+        padding-top: 1rem;
+        overflow: auto;
+        position: relative;
+        top: -.5px;
+        transition: all .5s ease-in-out;
+
+        height: 100%;
+        width: 100%;
+    }
+
+    .rituals.hidden {
+        position: absolute;
+        top: 815px;
+    }
+
 }
-
-
-
-
-
