--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,7 +22,7 @@ body ul {
 }
 
 header {
-  font-size: 1.3rem;
+  font-size: 2.3rem;
   font-weight: bold;
   color: whitesmoke;
   font-family: "Philosopher", sans-serif;
@@ -45,7 +45,7 @@ header h1:hover {
 }
 
 nav {
-  font-size: 1.5rem;
+  font-size: 2.5rem;
   background-color: rgb(18, 52, 70);
   color: whitesmoke;
   font-weight: bold;
@@ -99,7 +99,6 @@ nav ul li:hover {
   transition: all 0.5s ease-in-out;
   height: 100%;
   width: 100%;
-  gap: 10px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -112,10 +111,10 @@ nav ul li:hover {
   border-bottom: 1.5px solid black;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-  min-width: 420px;
-  height: 400px;
+  min-width: 650px;
   margin: 0;
-  padding-top: 1rem;
+  padding: 1rem;
+  padding-left: 5rem;
   background-color: white;
   flex-shrink: 0;
 }
@@ -127,7 +126,7 @@ nav ul li:hover {
   align-items: center;
 }
 .content-box .mansus-table ul div li {
-  font-size: 2rem;
+  font-size: 3rem;
   padding: 1rem;
   transition: transform 0.4s ease-in-out;
 }
@@ -156,10 +155,9 @@ nav ul li:hover {
 .content-box .mansus-table .way-box {
   display: grid;
   grid-template-rows: 80px 1fr;
-  width: 1050px;
   background-color: white;
   height: 85%;
-  margin-right: 200px;
+  margin-right: 700px;
   overflow: auto;
   flex-shrink: 0;
   opacity: 1;
@@ -168,8 +166,8 @@ nav ul li:hover {
 }
 .content-box .mansus-table .way-box .headers {
   display: grid;
-  grid-template-columns: repeat(3, 350px);
-  font-size: 1.4rem;
+  grid-template-columns: repeat(3, 650px);
+  font-size: 2.4rem;
   text-align: center;
   font-weight: bold;
   font-family: "Belgrad", sans-serif;
@@ -192,8 +190,8 @@ nav ul li:hover {
 }
 .content-box .mansus-table .way-box .way-products {
   display: grid;
-  grid-template-columns: repeat(3, 350px);
-  font-size: 1.2rem;
+  grid-template-columns: repeat(3, 650px);
+  font-size: 2.2rem;
 }
 .content-box .mansus-table .way-box .way-products .products {
   display: grid;
@@ -220,7 +218,7 @@ nav ul li:hover {
 }
 .content-box .mansus-table.hidden {
   position: absolute;
-  top: 815px;
+  top: 100%;
 }
 .content-box .rituals {
   background-image: url("../src/img/rites.png");
@@ -235,8 +233,60 @@ nav ul li:hover {
   transition: all 0.5s ease-in-out;
   height: 100%;
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.content-box .rituals .ritual-box {
+  display: grid;
+  grid-template-rows: 80px 1fr;
+  background-color: white;
+  width: 1350px;
+  border-radius: 10px;
+  height: 85%;
+}
+.content-box .rituals .ritual-box .headers {
+  display: grid;
+  grid-template-columns: repeat(3, 450px);
+  font-family: "Belgrad", sans-serif;
+  font-weight: bold;
+  text-align: center;
+  font-size: 1.4rem;
+}
+.content-box .rituals .ritual-box .headers div {
+  padding: 10px 20px 0px 20px;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+}
+.content-box .rituals .ritual-box .headers div:first-child {
+  border-top-left-radius: 10px;
+}
+.content-box .rituals .ritual-box .headers div:not(:last-child) {
+  border-left: 2px solid black;
+}
+.content-box .rituals .ritual-box .headers div:last-child {
+  border-left: 2px solid black;
+  border-right: 2px solid black;
+  border-top-right-radius: 10px;
+}
+.content-box .rituals .ritual-box .ritual-box-content {
+  display: grid;
+  grid-template-columns: repeat(3, 450px);
+}
+.content-box .rituals .ritual-box .ritual-box-content .summon-products {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  text-align: center;
+  border-bottom: 2px solid black;
+  border-right: 2px solid black;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.content-box .rituals .ritual-box .ritual-box-content .summon-products:first-child {
+  border-left: 2px solid black;
 }
 .content-box .rituals.hidden {
   position: absolute;
-  top: 815px;
+  top: 100%;
 }/*# sourceMappingURL=styles.css.map */
