--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -36,7 +36,7 @@ body {
 }
 
 header {
-    font-size: 1.3rem;
+    font-size: 2.3rem;
     font-weight: bold;
     color: whitesmoke;
     font-family: "Philosopher", sans-serif;
@@ -57,7 +57,7 @@ header {
 }
 
 nav {
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     background-color: $headerColor;
     color: whitesmoke;
     font-weight: bold;
@@ -112,7 +112,6 @@ nav {
         
         height: 100%;
         width: 100%;
-        gap: 10px;
     
         ul {
             box-shadow: 5px 5px 5px 2px rgb(56, 56, 56);
@@ -121,10 +120,10 @@ nav {
             border-bottom: 1.5px solid black;
             border-top-right-radius: 10px;
             border-bottom-right-radius: 10px;
-            min-width: 420px;
-            height: 400px;
+            min-width: 650px;
             margin: 0;
-            padding-top: 1rem;
+            padding: 1rem;
+            padding-left: 5rem;
             background-color: white;
             flex-shrink: 0;
 
@@ -132,7 +131,7 @@ nav {
                 gap: 15px;
 
                 li {
-                    font-size: 2rem;
+                    font-size: 3rem;
                     padding: 1rem;
                     transition: transform .4s ease-in-out;
 
@@ -168,10 +167,9 @@ nav {
         .way-box {
             display: grid;
             grid-template-rows: 80px 1fr;
-            width: 1050px;
             background-color: white;
             height: 85%;
-            margin-right: 200px;
+            margin-right: 700px;
             overflow: auto;
             flex-shrink: 0;
             opacity: 1;
@@ -180,8 +178,8 @@ nav {
 
             .headers {
                 display: grid;
-                grid-template-columns: repeat(3, 350px);
-                font-size: 1.4rem;
+                grid-template-columns: repeat(3, 650px);
+                font-size: 2.4rem;
                 text-align: center;
                 font-weight: bold;
                 font-family: "Belgrad", sans-serif;
@@ -209,8 +207,8 @@ nav {
 
             .way-products {
                 display: grid;
-                grid-template-columns: repeat(3, 350px);
-                font-size: 1.2rem;
+                grid-template-columns: repeat(3, 650px);
+                font-size: 2.2rem;
                 
                 .products {
                     display: grid;
@@ -251,8 +249,10 @@ nav {
 
     .mansus-table.hidden {
         position: absolute;
-        top: 815px;
+        top: 100%;
     }
+
+    // Rituals
 
     .rituals {
         background-image: url('../src/img/rites.png');
@@ -268,11 +268,72 @@ nav {
 
         height: 100%;
         width: 100%;
+
+        .ritual-box {
+            display: grid;
+            grid-template-rows: 80px 1fr;
+            background-color: white;
+            width: calc(450*3px);
+            border-radius: 10px;
+            height: 85%;
+
+            .headers {
+                display: grid;
+                grid-template-columns: repeat(3, 450px);
+                font-family: "Belgrad", sans-serif;
+                font-weight: bold;
+                text-align: center;
+                font-size: 1.4rem;
+
+                div {
+                    padding: 10px 20px 0px 20px;
+                    border-top: 2px solid black;
+                    border-bottom: 2px solid black;
+                }
+
+                div:first-child {
+                    border-top-left-radius: 10px;
+                }
+
+                div:not(:last-child) {
+                    border-left: 2px solid black;
+                }
+
+                div:last-child {
+                    border-left: 2px solid black;
+                    border-right: 2px solid black;
+                    border-top-right-radius: 10px;
+                }
+            }
+            .ritual-box-content {
+                display: grid;
+                grid-template-columns: repeat(3, 450px);
+                //font-size: 1.2rem;
+
+                .summon-products {
+                    display: grid;
+                    grid-template-rows: repeat(3, 1fr);
+                    text-align: center;
+                    border-bottom: 2px solid black;
+                    border-right: 2px solid black;
+                    border-bottom-left-radius: 10px;
+                    border-bottom-right-radius: 10px;
+                }
+
+                .summon-products:first-child {
+                    border-left: 2px solid black;
+                }
+                
+            }
+
+        }
+        
+        @include flexCenter(row, center, center)
     }
 
     .rituals.hidden {
         position: absolute;
-        top: 815px;
+        top: 100%;
     }
 
 }
